[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-blogging"
version = "0.1.0"
description = "AI blogging article generation assistant library using Gemini API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
